update: Configure JVM arguments for Maven plugins #22